2008-01-26  Peter Bloomfield

	Initial commit on mailbox-gsequence branch (rev 7831).
	* libbalsa/mailbox.c: reimplement LibBalsaMailbox::msg_tree
	using GSequence.
	* libbalsa/mailbox.h: ditto.
	* libbalsa/mailbox_imap.c: ditto.
	* libbalsa/mailbox_local.c: ditto.
	* src/balsa-mblist.c: (balsa_mblist_set_status_bar): ditto.

2008-01-09  Peter Bloomfield

	* libbalsa/libbalsa.h: add width and height to api for
	libbalsa_show_message_source.
	* libbalsa/source-viewer.c: (lsv_size_allocate_cb): save width
	and height.
	(libbalsa_show_message_source): add width and height to api;
	change horizontal scroll policy to GTK_POLICY_AUTOMATIC.
	* src/balsa-app.h: add source viewer width and height.
	* src/balsa-index.c: (bndx_view_source): use new api.
	* src/main-window.c: ditto.
	* src/message-window.c: (view_msg_source_cb): ditto.
	* src/save-restore.c: (config_global_load, config_save): load
	and save source viewer width and height.

2008-01-02  Peter Bloomfield

	* src/spell-check.c: (balsa_spell_check_start): compile without
	GtkSpell.

2008-01-01  Peter Bloomfield

	* configure.in: if glib is 2.14+, we use GRegex, so do not
	configure PCRE.
	* libbalsa/filter-funcs.c: (libbalsa_condition_regex_free): use
	GRegex if available.
	* libbalsa/filter-private.h: ditto.
	* libbalsa/filter.c: ditto.
	* libbalsa/mime.c: (mark_urls, get_url_helper, get_url_reg,
	get_ml_url_reg, get_ml_flowed_url_reg): ditto.
	* libbalsa/misc.h: ditto.
	* src/balsa-app.c: (balsa_quote_regex_new): new function--if
	GRegex is available, compile the quote regex once, and return
	a ref.
	* src/balsa-app.h: balsa_quote_regex_new is new.
	* src/balsa-message.c: use balsa_quote_regex_new.
	* src/balsa-mime-widget-text.c: (balsa_mime_widget_new_text):
	ditto.
	* src/balsa-print-object-text.c:
	(balsa_print_object_text_plain): ditto.
	* src/print.c: (print_wrap_body): ditto.
	* src/quote-color.c: (is_a_quote): use GRegex if available.
	* src/quote-color.h: ditto.